Tweak homepage wording and links

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -30,64 +30,64 @@
             <div class="row">
 
                 <div class="col-lg-4">
-                    <div class="card bg-gradient-danger border-0">
-                        <!-- Card body -->
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col">
-                                    <h3 class="card-title text-muted mb-0 text-white">Explore</h3>
-                                    <span class="h5 font-weight-bold mb-0 text-white">Curate your data</span>
-                                </div>
-                                <div class="col-auto">
-                                    <div class="icon icon-shape bg-white text-dark rounded-circle shadow">
-                                        <a class="nav-link" href="/explore">
+                    <a class="nav-link" href="/explore">
+                        <div class="card bg-gradient-danger border-0">
+                            <!-- Card body -->
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col">
+                                        <h3 class="card-title text-muted mb-0 text-white">Explore</h3>
+                                        <span class="h5 font-weight-bold mb-0 text-white">Curate and export drug data</span>
+                                    </div>
+                                    <div class="col-auto">
+                                        <div class="icon icon-shape bg-white text-dark rounded-circle shadow">
                                             <i class="ni ni-active-40"></i>
-                                        </a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-lg-4">
-                    <div class="card bg-gradient-danger border-0">
-                        <!-- Card body -->
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col">
-                                    <h3 class="card-title text-muted mb-0 text-white">Visualizations</h3>
-                                     <span class="h5 font-weight-bold mb-0 text-white">Intuitive visualizations</span>
-                                </div>
-                                <div class="col-auto">
-                                    <div class="icon icon-shape bg-white text-dark rounded-circle shadow">
-                                        <a class="nav-link" href="/visualizations">
+                    <a class="nav-link" href="/visualizations">
+                        <div class="card bg-gradient-danger border-0">
+                            <!-- Card body -->
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col">
+                                        <h3 class="card-title text-muted mb-0 text-white">Visualizations</h3>
+                                         <span class="h5 font-weight-bold mb-0 text-white">Intuitive visualizations</span>
+                                    </div>
+                                    <div class="col-auto">
+                                        <div class="icon icon-shape bg-white text-dark rounded-circle shadow">
                                             <i class="ni ni-active-40"></i>
-                                        </a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-lg-4">
-                    <div class="card bg-gradient-danger border-0">
-                        <!-- Card body -->
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col">
-                                    <h3 class="card-title text-muted mb-0 text-white">Bio-available compound</h3>
-                                     <span class="h5 font-weight-bold mb-0 text-white">Find bio availability of compounds</span>
-                                </div>
-                                <div class="col-auto">
-                                    <div class="icon icon-shape bg-white text-dark rounded-circle shadow">
-                                        <a class="nav-link" href="/compound/explore">
+                    <a class="nav-link" href="/compound/explore">
+                        <div class="card bg-gradient-danger border-0">
+                            <!-- Card body -->
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col">
+                                        <h3 class="card-title text-muted mb-0 text-white">Bioavailability</h3>
+                                         <span class="h5 font-weight-bold mb-0 text-white">Look up and predict compound bioavailability</span>
+                                    </div>
+                                    <div class="col-auto">
+                                        <div class="icon icon-shape bg-white text-dark rounded-circle shadow">
                                             <i class="ni ni-active-40"></i>
-                                        </a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
