--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -72,7 +72,13 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/explore">
                                 <i class="ni ni-bullet-list-67 text-default"></i>
-                                <span class="nav-link-text">Explore</span>
+                                <span class="nav-link-text">Explore Data</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/compound/explore">
+                                <i class="ni ni-bullet-list-67 text-default"></i>
+                                <span class="nav-link-text">Explore A Compound</span>
                             </a>
                         </li>
                         <li class="nav-item">
