Switch from nucleo icons to material design icons

--- a/app/static/css/argon.css
+++ b/app/static/css/argon.css
@@ -21434,7 +21434,7 @@ textarea[resize='horizontal']
 }
 .navbar-vertical .navbar-nav .nav-link > i
 {
-    font-size: .9375rem;
+    /*font-size: .9375rem;*/
     line-height: 1.5rem; 
 
     min-width: 2rem;
