--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -10,7 +10,7 @@
 	<!--     Fonts and icons     -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700">
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/nucleo/css/nucleo.css') }}"  type="text/css">
+	<!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/nucleo/css/nucleo.css') }}"  type="text/css"> -->
 
 	<!-- Argon CSS -->
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/argon.css') }}" type="text/css">
@@ -65,28 +65,46 @@
 					<ul class="navbar-nav">
 						<li class="nav-item">
 							<a class="nav-link" href="/">
-								<i class="ni ni-tv-2 text-primary"></i>
+								<i class="material-icons">home</i>
 								<span class="nav-link-text">Home</span>
 							</a>
 						</li>
                         <li class="nav-item">
                             <a class="nav-link" href="/explore">
-                                <i class="ni ni-bullet-list-67 text-default"></i>
-                                <span class="nav-link-text">Explore</span>
+                                <i class="material-icons">search</i>
+                                <span class="nav-link-text">Explore Data</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/api">
-                                <i class="ni ni-bullet-list-67 text-default"></i>
-                                <span class="nav-link-text">API</span>
+                            <a class="nav-link" href="/compound/explore">
+                                <i class="material-icons">pageview</i>
+                                <span class="nav-link-text">Explore A Compound</span>
                             </a>
                         </li>
+                        
 						<li class="nav-item">
-							<a class="nav-link" href="/visualizations">
-								<i class="ni ni-chart-pie-35"></i>
-								<span class="nav-link-text">Visualizations</span>
+							<a class="nav-link" href="/classes">
+								<i class="material-icons">blur_linear</i>
+								<span class="nav-link-text">Explore Targets By Company</span>
 							</a>
 						</li>
+					</ul>
+
+					<hr class="my-3">
+
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a class="nav-link" href="/visualizations">
+								<i class="material-icons">pie_chart</i>
+								<span class="nav-link-text">Demo Visualizations</span>
+							</a>
+						</li>
+						<li class="nav-item">
+                            <a class="nav-link" href="/api">
+                                <i class="material-icons">extension</i>
+                                <span class="nav-link-text">API Documentation</span>
+                            </a>
+                        </li>
 					</ul>
 				</div>
 			</div>
