Make page naming scheme more consistent

--- a/app/templates/explore_compound.html
+++ b/app/templates/explore_compound.html
@@ -13,7 +13,7 @@
                             <p> Try "Adefovir dipivoxil", "Atorvastatin", or "Amikacin" for compounds where DrugBank BA is False.
                                 Try "Abacavir", "Tramadol", or "Sumatriptan" for compounds where DrugBank BA is True.
                             </p>
-                            <form action="/compound/explore" method="post">
+                            <form action="/explore/compound" method="post">
                                 <input type="text" name="compound_name">
                                 <input type="submit" value="Submit">
                             </form>
