--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -69,13 +69,13 @@
 							</a>
 						</li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/explore">
+                            <a class="nav-link" href="/explore/data">
                                 <i class="material-icons">search</i>
                                 <span class="nav-link-text">Explore Data</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/compound/explore">
+                            <a class="nav-link" href="/explore/compound">
                                 <i class="material-icons">pageview</i>
                                 <span class="nav-link-text">Explore A Compound</span>
                             </a>
