Get rid of some more nucleo icons

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -41,7 +41,7 @@
                                     </div>
                                     <div class="col-auto">
                                         <div class="icon icon-shape bg-white text-dark rounded-circle shadow">
-                                            <i class="ni ni-active-40"></i>
+                                            <i class="material-icons md-36">play_arrow</i>
                                         </div>
                                     </div>
                                 </div>
@@ -61,7 +61,7 @@
                                     </div>
                                     <div class="col-auto">
                                         <div class="icon icon-shape bg-white text-dark rounded-circle shadow">
-                                            <i class="ni ni-active-40"></i>
+                                            <i class="material-icons md-36">play_arrow</i>
                                         </div>
                                     </div>
                                 </div>
@@ -81,7 +81,7 @@
                                     </div>
                                     <div class="col-auto">
                                         <div class="icon icon-shape bg-white text-dark rounded-circle shadow">
-                                            <i class="ni ni-active-40"></i>
+                                            <i class="material-icons md-36">play_arrow</i>
                                         </div>
                                     </div>
                                 </div>
