Fix the rest of the links

--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -39,7 +39,7 @@
 	<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 	{% endif %}
 
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}" type="text/css">
+	<link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}" type="text/css">
 
 	<title>Clinical Trial Capstone</title>
 	<link rel="icon" href="{{ url_for('static', filename='img/brand/favicon.png') }}"   type="image/png">
