Fix link to explore.js script

--- a/app/templates/explore.html
+++ b/app/templates/explore.html
@@ -88,6 +88,6 @@
     </div>
 </div>
 
-<script src="{{ url_for('static', filename='js/explore.js') }}"></script>
+<script src="{{ url_for('static', filename='explore.js') }}"></script>
 
 {% endblock %}
