fixed minor bugs and re-factored tests

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -30,7 +30,7 @@
             <div class="row">
 
                 <div class="col-lg-4">
-                    <a class="nav-link" href="/explore">
+                    <a class="nav-link" href="/explore/data">
                         <div class="card bg-gradient-danger border-0">
                             <!-- Card body -->
                             <div class="card-body">
@@ -70,7 +70,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4">
-                    <a class="nav-link" href="/compound/explore">
+                    <a class="nav-link" href="/explore/compound">
                         <div class="card bg-gradient-danger border-0">
                             <!-- Card body -->
                             <div class="card-body">
