--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -51,9 +51,11 @@
 			<!-- Brand -->
 			<div class="sidenav-header align-items-center mb-3">
 				<a class="navbar-brand" href="javascript:void(0)">
-					<img src="{{ url_for('static', filename='img/brand/harvard.png') }}" class="navbar-brand-img" alt="...">
+					<img src="{{ url_for('static', filename='img/brand/favicon.png') }}" class="navbar-brand-img" alt="...">
 				</a>
+                 <h3 class="mb-0">PharmaData4U</h3>
 			</div>
+            <br>
 			<div class="navbar-inner">
 				<!-- Collapse -->
 				<div class="collapse navbar-collapse" id="sidenav-collapse-main">
