--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -50,8 +50,8 @@
 		<div class="scrollbar-inner">
 			<!-- Brand -->
 			<div class="sidenav-header align-items-center mb-3">
-				<a class="navbar-brand" href="javascript:void(0)">
-					<img src="{{ url_for('static', filename='img/brand/harvard.png') }}" class="navbar-brand-img" alt="...">
+				<a class="navbar-brand" href="/">
+					<img src="{{ url_for('static', filename='img/brand/pharma.png') }}" class="navbar-brand-img" alt="Logo">
 				</a>
 			</div>
 			<div class="navbar-inner">
