--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -30,13 +30,13 @@
             <div class="row">
 
                 <div class="col-lg-4">
-                    <a class="nav-link" href="/explore">
+                    <a class="nav-link" href="/explore/data">
                         <div class="card bg-gradient-danger border-0">
                             <!-- Card body -->
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col">
-                                        <h3 class="card-title text-muted mb-0 text-white">Explore</h3>
+                                        <h3 class="card-title text-muted mb-0 text-white">Explore Data</h3>
                                         <span class="h5 font-weight-bold mb-0 text-white">Curate and export drug data</span>
                                     </div>
                                     <div class="col-auto">
@@ -50,14 +50,14 @@
                     </a>
                 </div>
                 <div class="col-lg-4">
-                    <a class="nav-link" href="/visualizations">
+                    <a class="nav-link" href="/explore/compound">
                         <div class="card bg-gradient-danger border-0">
                             <!-- Card body -->
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col">
-                                        <h3 class="card-title text-muted mb-0 text-white">Visualizations</h3>
-                                         <span class="h5 font-weight-bold mb-0 text-white">Intuitive visualizations</span>
+                                        <h3 class="card-title text-muted mb-0 text-white">Explore a Compound</h3>
+                                         <span class="h5 font-weight-bold mb-0 text-white">See a compound's descriptors and bioavailability</span>
                                     </div>
                                     <div class="col-auto">
                                         <div class="icon icon-shape bg-white text-dark rounded-circle shadow">
@@ -70,14 +70,14 @@
                     </a>
                 </div>
                 <div class="col-lg-4">
-                    <a class="nav-link" href="/compound/explore">
+                    <a class="nav-link" href="/classes">
                         <div class="card bg-gradient-danger border-0">
                             <!-- Card body -->
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col">
-                                        <h3 class="card-title text-muted mb-0 text-white">Bioavailability</h3>
-                                         <span class="h5 font-weight-bold mb-0 text-white">Look up and predict compound bioavailability</span>
+                                        <h3 class="card-title text-muted mb-0 text-white">Explore Targets By Company</h3>
+                                         <span class="h5 font-weight-bold mb-0 text-white">Intuitive visualizations of drug targets</span>
                                     </div>
                                     <div class="col-auto">
                                         <div class="icon icon-shape bg-white text-dark rounded-circle shadow">
