--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -52,8 +52,8 @@
 			<div class="sidenav-header align-items-center mb-3">
 				<a class="navbar-brand" href="/">
 					<img src="{{ url_for('static', filename='img/brand/pharma.png') }}" class="navbar-brand-img" alt="Logo">
-				</a>
-                 <h3 class="mb-0">PharmaData4U</h3>
+                	<h3>PharmaData4U</h3>
+                </a>
 			</div>
             <br>
 			<div class="navbar-inner">
