--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -52,7 +52,7 @@
 			<div class="sidenav-header align-items-center mb-3">
 				<a class="navbar-brand" href="/">
 					<img src="{{ url_for('static', filename='img/brand/pharma.png') }}" class="navbar-brand-img" alt="Logo">
-                	<h3>PharmaData4U</h3>
+                	<h3>ChemDataExplorer</h3>
                 </a>
 			</div>
             <br>
