Some cleanup for the explore compound page

--- a/app/templates/explore_compound.html
+++ b/app/templates/explore_compound.html
@@ -10,7 +10,7 @@
 
                             <h1>Please enter a compound name</h1>
 
-                            <p> Try "Adefovir dipivoxil", "Atorvastatin", or "Amikacin" for compounds where DrugBank BA is False.
+                            <p> Try "Adefovir dipivoxil", "Atorvastatin", or "Amikacin" for compounds where DrugBank BA is False.<br/>
                                 Try "Abacavir", "Tramadol", or "Sumatriptan" for compounds where DrugBank BA is True.
                             </p>
                             <form action="/explore/compound" method="post">
@@ -19,36 +19,38 @@
                             </form>
 
 
+                            {% if message is defined %}
                             <p>{{ message }}</p>
+                            {% endif %}
 
 
                             {% if (descriptor_dict is defined) and (descriptor_dict is not none) %}
 
                                 <div class="card">
                                     <!-- Card header -->
-                                    <div class="card-header">
+                                    <div class="card-body">
                                         <h3 class="mb-0">Compound descriptor values</h3>
-                                    </div>
-                                    <div class="table-responsive py-4">
-                                        <table class="table table-flush" id="datatable-basic">
-                                            <thead class="thead-light">
-                                            <tr>
-                                                {% for col_name_list in descriptor_dict %}
-                                                    <th>{{ col_name_list }}</th>
-                                                {% endfor %}
-                                            </tr>
-                                            </thead>
-                                            <tbody>
-                                            <tr>
-                                                {% for row in descriptor_dict %}
 
-                                                    <td>{{ descriptor_dict[row] }}</td>
+                                        <div class="table-responsive py-4">
+                                            <table class="table table-flush" id="datatable-basic">
+                                                <thead class="thead-light">
+                                                <tr>
+                                                    {% for col_name_list in descriptor_dict %}
+                                                        <th>{{ col_name_list }}</th>
+                                                    {% endfor %}
+                                                </tr>
+                                                </thead>
+                                                <tbody>
+                                                <tr>
+                                                    {% for row in descriptor_dict %}
 
-                                                {% endfor %}
-                                            </tr>
-                                            </tbody>
-                                        </table>
+                                                        <td>{{ descriptor_dict[row] }}</td>
 
+                                                    {% endfor %}
+                                                </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
                                     </div>
                                 </div>
                             {% else %}
@@ -59,38 +61,36 @@
 
                                 <div class="card">
                                     <!-- Card header -->
-                                    <div class="card-header">
+                                    <div class="card-body">
                                         <h3 class="mb-0">Bioavailability</h3>
-                                        <p>What is interesting here is that many compounds that DrugBank indicates has False bioavailability actually have non-zero BA percentages in their absorption free-text fields. See Amikacin as an example. Or go to the /explore page and search for compounds where "bioavailability" is "0", but "bioavailability_percent" is ">0" in the search field. </p>
-                                    </div>
+                                        <p><strong>Note:</strong> Many compounds that DrugBank indicates have False bioavailability actually have non-zero BA percentages in their absorption free-text fields. See Amikacin as an example. Or go to the <a href="/explore/data">Explore Data</a> page and search for compounds where <code>bioavailability</code> is <code>0</code>, but <code>bioavailability_percent</code> is <code>>0</code>. </p>
 
-                                    <div class="table-responsive py-4">
-                                        <table class="table table-flush" id="datatable-basic">
-                                            <thead class="thead-light">
-                                            <tr>
-                                                {% for temp2 in ba_dict[0].keys() %}
-                                                    <th>{{ temp2 }}</th>
-                                                {% endfor %}
-                                            </tr>
-                                            </thead>
-                                            <tbody>
-                                            {% for row in ba_dict %}
-                                            <tr>
-                                                {% for key, value in row.items() %}
+                                        <div class="table-responsive py-4">
+                                            <table class="table table-flush" id="datatable-basic">
+                                                <thead class="thead-light">
+                                                <tr>
+                                                    {% for temp2 in ba_dict[0].keys() %}
+                                                        <th>{{ temp2 }}</th>
+                                                    {% endfor %}
+                                                </tr>
+                                                </thead>
+                                                <tbody>
+                                                {% for row in ba_dict %}
+                                                <tr>
+                                                    {% for key, value in row.items() %}
 
-                                                    <td>{{ value }}</td>
+                                                        <td>{{ value }}</td>
 
-                                                {% endfor %}
-                                            </tr>
-                                              {% endfor %}
-                                            </tbody>
-                                        </table>
+                                                    {% endfor %}
+                                                </tr>
+                                                  {% endfor %}
+                                                </tbody>
+                                            </table>
 
+                                        </div>
                                     </div>
                                 </div>
-                            {% else %}
                             {% endif %}
-
 
 
                             {% if (descriptor_dict is defined) and ( descriptor_dict is not none) %}
@@ -98,52 +98,46 @@
                                 </br>
 
                             </br>
-
-                            {% else %}
                             {% endif %}
 
                             {% if (similar_dict is defined) and  (similar_dict is not none)  %}
                                 <div class="card">
                                     <!-- Card header -->
-                                    <div class="card-header">
+                                    <div class="card-body">
                                         <h3 class="mb-0">Similar compounds by descriptors</h3>
-                                    </div>
-                                    <div class="table-responsive py-4">
+                                        <div class="table-responsive py-4">
 
-
-                                        {% for tbl in similar_dict %}
-                                            <div class="card-header">
-                                                <h3 class="mb-0">{{ tbl }}</h3>
-                                            </div>
-                                            <table class="table table-flush" id="datatable-basic">
-                                                <thead class="thead-light">
-                                                <tr>
-                                                    {% for temp2 in similar_dict[tbl][2].keys() %}
-                                                        <th>{{ temp2 }}</th>
-                                                    {% endfor %}
-
-                                                </tr>
-                                                </thead>
-                                                <tbody>
-                                                {% for temp in similar_dict[tbl] %}
+                                            {% for tbl in similar_dict %}
+                                                <div class="card-header">
+                                                    <h3 class="mb-0">{{ tbl }}</h3>
+                                                </div>
+                                                <table class="table table-flush" id="datatable-basic">
+                                                    <thead class="thead-light">
                                                     <tr>
-                                                        {% for key,value in temp.items() %}
-                                                            <td>{{ value }}</td>
+                                                        {% for temp2 in similar_dict[tbl][2].keys() %}
+                                                            <th>{{ temp2 }}</th>
                                                         {% endfor %}
-                                                    </tr>
-                                                {% endfor %}
-                                                </tbody>
-                                            </table>
-                                            </br>
-                                            </br>
-                                        {% endfor %}
 
+                                                    </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                    {% for temp in similar_dict[tbl] %}
+                                                        <tr>
+                                                            {% for key,value in temp.items() %}
+                                                                <td>{{ value }}</td>
+                                                            {% endfor %}
+                                                        </tr>
+                                                    {% endfor %}
+                                                    </tbody>
+                                                </table>
+                                                </br>
+                                                </br>
+                                            {% endfor %}
+
+                                        </div>
                                     </div>
                                 </div>
-                            {% else %}
                             {% endif %}
-
-
 
                         </div>
                     </div>
